--- a/demo/login/login.html
+++ b/demo/login/login.html
@@ -10,9 +10,8 @@
 
 <body>
     <div>我是login文件</div>
-    <div>我是login文件修改1</div>
-    <div>我是login文件修改3333</div>
+    <div>我是login分支</div>
 </body>
 
 </html>
-<script src="js/index.js"></script>
+<script src="../js/index.js"></script>
